# llvm-examples-cct-cfg-dfa

./: CMakeLists.txt  LICENSE  README.md  runme.sh  visualize.sh
examples/: CMakeLists.txt
examples/level1/: branch.c  calls.c
examples/level2/: dispatcher.c  level2.h  main.c  stats.c
include/: cct_runtime.h
output/: report.md
output/level1/cct/: calls_cct.txt
output/level1/cfg/: foo.dot  main.dot
output/level1/ir/: branch.ll  calls.instrumented.bc  calls.ll
output/level1/liveness/: foo.txt  main.txt
output/level2/cct/: level2_cct.txt
output/level2/cfg/: depth_expand.dot  fanout_walk.dot  log_progress.dot  main.dot  print_task.dot  run_pipeline.dot  seed_tasks.dot  sum_weights.dot
output/level2/ir/: dispatcher.bc  main.bc  module.bc  module.instrumented.bc  module.ll  stats.bc
output/level2/liveness/: depth_expand.txt  fanout_walk.txt  log_progress.txt  main.txt  print_task.txt  run_pipeline.txt  seed_tasks.txt  sum_weights.txt
plugins/: CMakeLists.txt
plugins/CCTInstrument/: CCTInstrument.cpp  CMakeLists.txt
plugins/CFGDot/: CFGDot.cpp  CMakeLists.txt
plugins/DataFlow/: CMakeLists.txt  Liveness.cpp
runtime/: CMakeLists.txt  cct_runtime.cpp
scripts/: generate_report.sh  visualize_cfg.sh  visualize_liveness.py
